使用 Colaboratory 建立

--- a/Titanic_Machine_Learning_from_Disaster.ipynb
+++ b/Titanic_Machine_Learning_from_Disaster.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNhzUegzXjxYUfdEXJK/Egv",
+      "authorship_tag": "ABX9TyMPzpmKmFXzOg0vPTzTIOJz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1326,7 +1326,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 317
+          "height": 297
         },
         "id": "uMD-E2L4sIyl",
         "outputId": "e12381bb-6643-4fef-afbc-cd3e9e2b76b2"
@@ -1695,7 +1695,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 317
+          "height": 297
         },
         "id": "WunlIh7AscvW",
         "outputId": "9e5ad620-7d84-4643-f97b-53ea35e35fbf"
@@ -2040,27 +2040,19 @@
     {
       "cell_type": "code",
       "source": [
-        "total_data = train_data.append(test_data).reset_index()\n",
+        "total_data = pd.concat([train_data, test_data], ignore_index=True)\n",
         "total_data"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 898
+          "height": 776
         },
         "id": "UxzIMOOtxhCW",
-        "outputId": "9956560a-7d67-49e7-b404-430a682f71e2"
+        "outputId": "bd929143-84c2-455a-bc06-b98935078ae7"
       },
-      "execution_count": 101,
+      "execution_count": 112,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-101-2c222866da67>:1: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-            "  total_data = train_data.append(test_data).reset_index()\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -2091,24 +2083,24 @@
               "1307                                Ware, Mr. Frederick    male   NaN      0   \n",
               "1308                           Peter, Master. Michael J    male   NaN      1   \n",
               "\n",
-              "      Parch              Ticket      Fare Cabin Embarked  \n",
-              "0         0           A/5 21171    7.2500   NaN        S  \n",
-              "1         0            PC 17599   71.2833   C85        C  \n",
-              "2         0    STON/O2. 3101282    7.9250   NaN        S  \n",
-              "3         0              113803   53.1000  C123        S  \n",
-              "4         0              373450    8.0500   NaN        S  \n",
-              "...     ...                 ...       ...   ...      ...  \n",
-              "1304      0           A.5. 3236    8.0500   NaN        S  \n",
-              "1305      0            PC 17758  108.9000  C105        C  \n",
-              "1306      0  SOTON/O.Q. 3101262    7.2500   NaN        S  \n",
-              "1307      0              359309    8.0500   NaN        S  \n",
-              "1308      1                2668   22.3583   NaN        C  \n",
+              "      Parch              Ticket      Fare Cabin Embarked  Sex_Code  \n",
+              "0         0           A/5 21171    7.2500   NaN        S         1  \n",
+              "1         0            PC 17599   71.2833   C85        C         0  \n",
+              "2         0    STON/O2. 3101282    7.9250   NaN        S         0  \n",
+              "3         0              113803   53.1000  C123        S         0  \n",
+              "4         0              373450    8.0500   NaN        S         1  \n",
+              "...     ...                 ...       ...   ...      ...       ...  \n",
+              "1304      0           A.5. 3236    8.0500   NaN        S         1  \n",
+              "1305      0            PC 17758  108.9000  C105        C         0  \n",
+              "1306      0  SOTON/O.Q. 3101262    7.2500   NaN        S         1  \n",
+              "1307      0              359309    8.0500   NaN        S         1  \n",
+              "1308      1                2668   22.3583   NaN        C         1  \n",
               "\n",
-              "[1309 rows x 13 columns]"
+              "[1309 rows x 14 columns]"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a388d0fa-99ea-4922-8c81-f2031d28f5fb\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-3294c435-7ea0-4d61-a945-cad8fa43b0ce\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -2140,6 +2132,7 @@
               "      <th>Fare</th>\n",
               "      <th>Cabin</th>\n",
               "      <th>Embarked</th>\n",
+              "      <th>Sex_Code</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -2158,6 +2151,7 @@
               "      <td>7.2500</td>\n",
               "      <td>NaN</td>\n",
               "      <td>S</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -2174,6 +2168,7 @@
               "      <td>71.2833</td>\n",
               "      <td>C85</td>\n",
               "      <td>C</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -2190,6 +2185,7 @@
               "      <td>7.9250</td>\n",
               "      <td>NaN</td>\n",
               "      <td>S</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -2206,6 +2202,7 @@
               "      <td>53.1000</td>\n",
               "      <td>C123</td>\n",
               "      <td>S</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -2222,9 +2219,11 @@
               "      <td>8.0500</td>\n",
               "      <td>NaN</td>\n",
               "      <td>S</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
+              "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
@@ -2254,6 +2253,7 @@
               "      <td>8.0500</td>\n",
               "      <td>NaN</td>\n",
               "      <td>S</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1305</th>\n",
@@ -2270,6 +2270,7 @@
               "      <td>108.9000</td>\n",
               "      <td>C105</td>\n",
               "      <td>C</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1306</th>\n",
@@ -2286,6 +2287,7 @@
               "      <td>7.2500</td>\n",
               "      <td>NaN</td>\n",
               "      <td>S</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1307</th>\n",
@@ -2302,6 +2304,7 @@
               "      <td>8.0500</td>\n",
               "      <td>NaN</td>\n",
               "      <td>S</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1308</th>\n",
@@ -2318,15 +2321,16 @@
               "      <td>22.3583</td>\n",
               "      <td>NaN</td>\n",
               "      <td>C</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>1309 rows × 13 columns</p>\n",
+              "<p>1309 rows × 14 columns</p>\n",
               "</div>\n",
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a388d0fa-99ea-4922-8c81-f2031d28f5fb')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3294c435-7ea0-4d61-a945-cad8fa43b0ce')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2378,12 +2382,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-a388d0fa-99ea-4922-8c81-f2031d28f5fb button.colab-df-convert');\n",
+              "        document.querySelector('#df-3294c435-7ea0-4d61-a945-cad8fa43b0ce button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-a388d0fa-99ea-4922-8c81-f2031d28f5fb');\n",
+              "        const element = document.querySelector('#df-3294c435-7ea0-4d61-a945-cad8fa43b0ce');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -2403,8 +2407,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-1a1e9c05-b6b0-4169-a054-c6fd5fc8cb7a\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1a1e9c05-b6b0-4169-a054-c6fd5fc8cb7a')\"\n",
+              "<div id=\"df-d542891e-eb01-4c73-bd4c-ba1a823edc0a\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d542891e-eb01-4c73-bd4c-ba1a823edc0a')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2523,14 +2527,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-1a1e9c05-b6b0-4169-a054-c6fd5fc8cb7a button');\n",
+              "        document.querySelector('#df-d542891e-eb01-4c73-bd4c-ba1a823edc0a button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_274fbd3b-b037-4577-aa20-78af4682e55e\">\n",
+              "  <div id=\"id_5caf7bd7-4e6f-4fbe-9675-9e48071eb836\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -2574,7 +2578,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_274fbd3b-b037-4577-aa20-78af4682e55e button.colab-df-generate');\n",
+              "        document.querySelector('#id_5caf7bd7-4e6f-4fbe-9675-9e48071eb836 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -2590,7 +2594,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 101
+          "execution_count": 112
         }
       ]
     },
@@ -3224,7 +3228,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 864
+          "height": 776
         },
         "id": "w-i4i_XluecJ",
         "outputId": "6fcc120d-ab26-475e-e225-edf022eb1b4f"
