使用 Colaboratory 建立

--- a/Titanic_Machine_Learning_from_Disaster.ipynb
+++ b/Titanic_Machine_Learning_from_Disaster.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOlbUttQOrz/MkO1Xe3l9Zg",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyP/QxQuYK3p4d6s/vqoRTUQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,46 +40,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "[參考程式碼1](https://yulongtsai.medium.com/https-medium-com-yulongtsai-titanic-top3-8e64741cc11f)"
+        "* [Teach Web](https://yulongtsai.medium.com/https-medium-com-yulongtsai-titanic-top3-8e64741cc11f)\n",
+        "* [Random Forest](https://medium.com/chung-yi/ml%E5%85%A5%E9%96%80-%E5%8D%81%E4%B8%83-%E9%9A%A8%E6%A9%9F%E6%A3%AE%E6%9E%97-random-forest-6afc24871857)\n",
+        "* [GSCV](http://www.taroballz.com/2018/07/14/ML_RandomForest/)\n",
+        "* [RFECV](https://ithelp.ithome.com.tw/articles/10232299)\n",
+        "* [Stratified K-Fold Cross-Validation](https://andy6804tw.github.io/2021/07/09/k-fold-validation/)"
       ],
       "metadata": {
         "id": "6uhgaMQBSw8-"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "[參考程式碼2](https://hackmd.io/@f820920/BJH6xeihu#Kaggle-Competition---Titanic-Dataset//)"
-      ],
-      "metadata": {
-        "id": "QAgciBt9P2V6"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "[Random Forest](https://medium.com/chung-yi/ml%E5%85%A5%E9%96%80-%E5%8D%81%E4%B8%83-%E9%9A%A8%E6%A9%9F%E6%A3%AE%E6%9E%97-random-forest-6afc24871857)"
-      ],
-      "metadata": {
-        "id": "Qi25XDyIPfnR"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "[GSCV](http://www.taroballz.com/2018/07/14/ML_RandomForest/)"
-      ],
-      "metadata": {
-        "id": "RJm3h1SPP60O"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "[RFECV](https://ithelp.ithome.com.tw/articles/10232299)"
-      ],
-      "metadata": {
-        "id": "WBrd5_8tZKq1"
       }
     },
     {
@@ -176,8 +145,6 @@
       ],
       "source": [
         "import opendatasets as od\n",
-        "\n",
-        "# api_token = {\"username\":\"wzx0110\",\"key\":\"a0d13bceeed6951b60196dc39430c062\"}\n",
         "od.download('https://www.kaggle.com/c/titanic')"
       ]
     },
@@ -224,7 +191,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 487
+          "height": 932
         },
         "id": "iD_GR29ZqQwM",
         "outputId": "0e07e77d-fc1b-40db-f7c1-bc3089ec9b4b"
@@ -761,7 +728,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 453
+          "height": 742
         },
         "id": "3LwdzKOImID5",
         "outputId": "d2033c70-b937-41a3-d062-12195487fc18"
@@ -2082,7 +2049,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 487
+          "height": 864
         },
         "id": "UxzIMOOtxhCW",
         "outputId": "3d0f55ad-812a-4f74-dcc8-f38932d91427"
@@ -3241,7 +3208,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 589
+          "height": 864
         },
         "id": "w-i4i_XluecJ",
         "outputId": "93311e4c-f418-407c-d6af-1238f5a2dc2b"
@@ -5384,7 +5351,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 556
+          "height": 449
         },
         "id": "qYmZIgXRWf9I",
         "outputId": "3b871178-408c-468c-fb93-ba32b305a8e1"
@@ -5500,7 +5467,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 733
+          "height": 651
         },
         "id": "xg7q0qIJWwi2",
         "outputId": "357db13f-2e69-4dd0-82c5-ba4f3698862c"
@@ -6099,7 +6066,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 422
+          "height": 339
         },
         "id": "VJK4sG_DbMB7",
         "outputId": "dfd3cf57-b37c-4b7e-e53b-f3dccc8b040e"
@@ -6235,9 +6202,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "i5JN5OrtbZ06",
-        "outputId": "3eb3c7ce-6cb2-4b80-e748-191b8ce8ea86"
+        "outputId": "b01ff78f-73e5-4d22-f06e-ce7c0057828d"
       },
-      "execution_count": 52,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
@@ -6260,7 +6227,7 @@
       "metadata": {
         "id": "10HJJsaKbfEC"
       },
-      "execution_count": 54,
+      "execution_count": 56,
       "outputs": []
     }
   ]
